--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!---->
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -219,7 +218,7 @@
 				<key>framebuffer-con1-type</key>
 				<data>AAQAAA==</data>
 				<key>framebuffer-con2-busid</key>
-				<data>BgAAAA==</data>
+				<data>AQAAAA==</data>
 				<key>framebuffer-con2-enable</key>
 				<data>AAAAAA==</data>
 				<key>framebuffer-con2-flags</key>
